# Health-Monitor

./: .gitignore  HealthMonitor.db  README.md  create_tables.py  pyproject.toml  secret_manager.py
config/: constants.py  tables.py
core/connectors/: myfitnesspal.py  strava.py
core/executors/: create_data_model_tables.py  create_datamodel_tables.py  initialize.py
core/extractors/: my_fitness_pal.py  strava.py
core/loaders/: loaders.py
core/transformers/: data_processing.py  datamodel_tables.py  filters.py  myfitnesspal_models.py  strava_models.py
core/utils/: directories.py  errors.py  helpers.py  logs_strava_api.json
sql_queries/: select_all.sql
sqlite/: database.py
sqlite/sql_commands/: create_indexes.sql  create_tables.sql  insert_plan_cardio.sql  insert_plan_utility.sql  insert_plan_weights.sql  test_query.sql
tests/: conftest.py  test_data_processing.py  test_datamodel_tables.py  test_directories.py  test_filters.py  test_helpers.py  test_strava_transformers.py
tests/resources/: daily_timestamps.json  quarter_hour_timestamps.json  strava_athlete_stats.json  strava_best_efforts_list.json  strava_detailed_activity.json  strava_detailed_activity_list.json  strava_lap_list.json  strava_map.json  strava_segment.json  strava_segment_effort_list.json  strava_split_list.json  strava_summary_activity_list.json  strava_totals_list.json
utils/: directories.py  errors.py  helpers.py
