[tool.poetry]
name = "health-monitor"
version = "0.1.0"
description = "Collect, transform and visualize health related data so the progress can be tracked, inisights and data driven decisions madep."
authors = ["Michal Wolszczak <michal.wolszczakmw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
