[tool.poetry]
name = "health-monitor"
version = "0.1.0"
description = "Collect, transform and visualize health related data so the progress can be tracked, inisights and data driven decisions made."
authors = ["Michal Wolszczak <michal.wolszczakmw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
pytest = "^6.2.5"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
dataclass-wizard = "^0.15.2"
typing-extensions = "^3.10.0"
myfitnesspal = "^1.16.4"
toml = "^0.10.2"
freezegun = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "strava"
]

# logging configuration

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.simple]
format = '%(asctime)s - %(name)s - %(levelname)s - %(message)s'

[tool.logging.handlers.console]
class = "logging.StreamHandler"
level = "INFO"
formatter = "simple"
stream = "ext://sys.stdout"

[tool.logging.root]
level = "INFO"
handlers = ["console"]

[tool.logging.loggers.module1]
level = "INFO"
handler = ["console"]
propagate = "yes"

